--- a/Fishery Simulation/Properties/Resources.resx
+++ b/Fishery Simulation/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Open_Folder_Full_icon_20x20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\res\layout\Open-Folder-Full-icon-20x20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="school_of_fish" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\res\layout\school_of_fish.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
